# storage-gateway

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  README.md  release.Dockerfile  test.Dockerfile
.github/workflows/: cd.yml  ci.yml  release.yml
src/: config.rs  handle.rs  handler.rs  io.rs  main.rs  response.rs  router.rs  s3.rs  server.rs  service.rs
src/server/: management.rs
tests/: integration_test.rs  sheard.rs  sheared.rs
tests/data/: index.html  style.css
tests/data/subdir/: index.html
