[package]
name = "storage-gateway"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.14.0", default-features = false }
futures-util = "0.3.30"
http-body-util = "0.1.1"
hyper = { version = "1.3.1", features = ["server", "http1"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
typed-builder = "0.18.2"
bytes = "1.6.0"
serde = { version = "1.0.202", features = ["derive"] }
aws-config = "1.4.0"
aws-credential-types = "1.2.0"
aws-smithy-types = "1.1.9"
aws-smithy-runtime = "1.5.0"
aws-smithy-runtime-api = "1.6.0"
aws-sdk-s3 = { version = "1.29.0", features = ["test-util"] }
aws-sdk-sts = "1.25.0"
aws-types = "1.2.1"
mime = "0.3.17"
mime_guess = "2.0.3"
async-trait = "0.1.80"
regex = "1.10.4"

[dev-dependencies]
reqwest = { version = "0.12.4", default-features = false }
testcontainers = "0.16.7"
test-case = "3.3.1"

[features]
default = []
__tests = []